# kintsugi

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DECISIONS.md  README.md  aegis-admin-recorder-design.md  aegis-design-doc.md  aegis-enterprise-roadmap.md  aegis-phase0-1-tasklist.md  aegis-phase2-5-designdoc.md  kintsugi-design-doc.md  kintsugi-enterprise-roadmap.md
.claude-plugin/: marketplace.json
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release-desktop.yml  release.yml
crates/aegis-cli/: Cargo.toml
crates/aegis-cli/src/: init.rs  logview.rs  main.rs
crates/aegis-cli/tests/: cli.rs  cli_queue.rs
crates/aegis-core/: Cargo.toml
crates/aegis-core/src/: lib.rs  log.rs  parse.rs  policy.rs  redact.rs  rules.rs  snapshot.rs  types.rs
crates/aegis-core/tests/: classifier_corpus.rs  classifier_proptest.rs  coverage_extra.rs  event_log.rs  log_filters.rs  pending_queue.rs  perf_report.rs  robustness_fuzz.rs  security_stress.rs  shell_wrapper.rs
crates/aegis-daemon/: Cargo.toml
crates/aegis-daemon/src/: ipc.rs  lib.rs  main.rs  watch.rs
crates/aegis-daemon/tests/: ipc_roundtrip.rs  latency.rs  misc.rs  phase2_model.rs  phase3_undo.rs  phase4_watch.rs  phase5_killswitch.rs  phase6_queue.rs  policy.rs  queue_ipc.rs  resolve_memory.rs  socket_perms.rs
crates/aegis-intercept/: Cargo.toml
crates/aegis-intercept/src/: dialect.rs  holdcard.rs  hook.rs  lib.rs  mcp.rs  shim.rs
crates/aegis-intercept/tests/: hook_bridge.rs  mcp_exec.rs  shim_exec.rs
crates/aegis-model/: Cargo.toml
crates/aegis-model/src/: heuristic.rs  lib.rs  llama.rs  manage.rs
crates/aegis-tui/: Cargo.toml
crates/aegis-tui/src/: app.rs  lib.rs  ui.rs
crates/kintsugi-app-types/src/: lib.rs
crates/kintsugi-app/src/: lib.rs
crates/kintsugi-cli/: Cargo.toml
crates/kintsugi-cli/src/: admin_cmd.rs  dryrun.rs  init.rs  logview.rs  main.rs  model_cmd.rs  record.rs  service.rs  shell_enforce.rs  uninstall.rs  watcher.rs
crates/kintsugi-cli/tests/: admin.rs  cli.rs  cli_queue.rs  log_admin.rs  recorder.rs
crates/kintsugi-core/: Cargo.toml  README.md
crates/kintsugi-core/src/: admin.rs  lib.rs  log.rs  memory.rs  negotiate.rs  parse.rs  policy.rs  redact.rs  rules.rs  shell.rs  snapshot.rs  taint.rs  types.rs
crates/kintsugi-core/tests/: classifier_corpus.rs  classifier_proptest.rs  coverage_extra.rs  event_log.rs  fuzz_security.rs  log_filters.rs  pending_queue.rs  perf_report.rs  provenance_predicates.rs  robustness_fuzz.rs  security_stress.rs  shell_wrapper.rs
crates/kintsugi-daemon/: Cargo.toml  README.md
crates/kintsugi-daemon/src/: ipc.rs  lib.rs  main.rs  watch.rs
crates/kintsugi-daemon/tests/: admin_shutdown.rs  ipc_roundtrip.rs  latency.rs  misc.rs  negotiation.rs  phase2_model.rs  phase3_undo.rs  phase4_watch.rs  phase5_killswitch.rs  phase6_queue.rs  policy.rs  provenance_trail.rs  queue_ipc.rs  recorder.rs  resolve_memory.rs  socket_perms.rs  taint_state.rs  trifecta_gate.rs
crates/kintsugi-intercept/: Cargo.toml  README.md
crates/kintsugi-intercept/src/: dialect.rs  holdcard.rs  hook.rs  lib.rs  mcp.rs  observe.rs  shim.rs
crates/kintsugi-intercept/tests/: hook_bridge.rs  mcp_exec.rs  shim_exec.rs
crates/kintsugi-model/: Cargo.toml  README.md
crates/kintsugi-model/src/: heuristic.rs  lib.rs  llama.rs  manage.rs
crates/kintsugi-tui/: Cargo.toml  README.md
crates/kintsugi-tui/examples/: frame.rs  screens.rs
crates/kintsugi-tui/src/: app.rs  lib.rs  splash.rs  ui.rs
design/plan/: kintsugi-admin-recorder-design.md  kintsugi-app-design-brief.md  kintsugi-interaction-design.md  kintsugi-phase0-1-tasklist.md  kintsugi-phase2-5-designdoc.md  kintsugi-phase6-handoff.md  kintsugi-phase6-hardening.md  kintsugi-phase6-tasklist.md  kintsugi-provenance-design.md
desktop/: Cargo.toml  README.md  index.html
desktop-dx/: Cargo.toml  build.rs  install.sh
desktop-dx/assets/: styles.css
desktop-dx/src/: bindings.rs  main.rs  state.rs  theme.rs  tray.rs
desktop-dx/src/components/: screens.rs  shell.rs
desktop/src/: invoke.rs
desktop/src-tauri/: tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/ui/: app.css
desktop/ui/src/: main.rs
docs/: KINTSUGI-EXPLAINED.md  classifier-research.md  demo.md  homebrew.md  hooks.md  mcp.md  model.md  policy.md  provenance.md  queue.md  security-assessment.md  snapshot-research.md
packaging/homebrew/: aegis.rb  kintsugi.rb
plugin/aegis/: .mcp.json  README.md
plugin/aegis/.claude-plugin/: plugin.json
plugin/aegis/hooks/: hooks.json
scripts/: demo.sh  demo.tape  fix_svg_width.py  gen_cast_svg.py  gen_svg.py  install.sh  pick-model.sh
site/: CNAME  about.html  app.js  assurance.html  enterprise.html  features.html  index.html  install.html  install.sh  pick-model.sh  style.css  tour.html
