[workspace]
resolver = "2"
members = [
    "crates/kintsugi-core",
    "crates/kintsugi-daemon",
    "crates/kintsugi-intercept",
    "crates/kintsugi-cli",
    "crates/kintsugi-model",
    "crates/kintsugi-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["arrowassassin"]
repository = "https://github.com/arrowassassin/kintsugi"
rust-version = "1.96"

[workspace.dependencies]
# Internal crates
kintsugi-core = { path = "crates/kintsugi-core" }
kintsugi-daemon = { path = "crates/kintsugi-daemon" }
kintsugi-intercept = { path = "crates/kintsugi-intercept" }
kintsugi-model = { path = "crates/kintsugi-model" }
kintsugi-tui = { path = "crates/kintsugi-tui" }

# Serialization / data
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"

# Errors
anyhow = "1.0.102"
thiserror = "2.0.18"

# Identity / time / hashing
uuid = { version = "1.23.3", features = ["v4", "serde"] }
time = { version = "0.3.49", features = ["serde", "serde-well-known", "formatting", "parsing", "macros"] }
sha2 = "0.11.0"
hex = "0.4.3"

# Storage
rusqlite = { version = "0.40.1", features = ["bundled"] }

# IPC (cross-platform local sockets / named pipes)
interprocess = "2.4.2"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Shell parsing (pure-Rust, MIT) — AST for the deterministic danger classifier.
brush-parser = "0.4"

# Config dirs
directories = "6.0.0"

# Crypto (admin-locked settings): argon2id password verifier + key derivation,
# XChaCha20-Poly1305 AEAD for sealed-at-rest settings, zeroize for key material.
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
zeroize = { version = "1.8.2", features = ["derive"] }
getrandom = "0.2.16"

# Dev / tests
tempfile = "3.27.0"

[profile.release]
opt-level = "s"      # optimize for size; these binaries are I/O-bound
lto = "fat"          # cross-crate inlining + dead-code elimination
codegen-units = 1    # better optimization / smaller output
strip = "symbols"    # drop symbol tables from shipped binaries
panic = "abort"      # no unwind tables; panic hooks still run (TUI teardown safe)
