# Kintsugi Control Room — Dioxus DESKTOP app (the real frontend).
#
# Runs in ONE process with the engine, so screens call `kintsugi-app` directly —
# no Tauri, no `invoke`, no WASM, no IPC boundary (that boundary was the source of
# the click-spinner). This is the design's own target, so the look is 1:1.
#
# NOT part of the main workspace: it pulls the platform webview + dioxus-desktop,
# which CI/headless don't carry. Build on a workstation:
#   cd desktop-dx && cargo run        # or: dx serve  (cargo install dioxus-cli)
[workspace]

[package]
name = "kintsugi-control-room"
version = "0.2.1"
edition = "2021"
description = "Kintsugi Control Room — local-first desktop dashboard for AI-agent command governance."
license = "MIT"

[dependencies]
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["time", "rt", "macros"] }
anyhow = "1"
hex = "0.4"
# Scrub the session master-password from memory when it's dropped (on lock).
zeroize = "1.8.2"
# Localize the stored UTC timestamps to the user's timezone for display.
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
# Live Hugging Face model search + GGUF download (the only outbound network the
# app makes, and only when the user searches/downloads a model).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Decode the build-rasterized PNG into RGBA for the OS window icon at startup.
png = "0.17"
# System-tray (macOS menubar / Windows taskbar / Linux indicator) so the user
# sees Kintsugi running and can click to focus the window.
tray-icon = "0.19"
# Image decoder for the tray icon's RGBA buffer.
image = { version = "0.25", default-features = false, features = ["png"] }
# The engine + daemon, called directly in-process (no IPC / no invoke).
kintsugi-app = { path = "../crates/kintsugi-app" }
kintsugi-daemon = { path = "../crates/kintsugi-daemon" }
kintsugi-core = { path = "../crates/kintsugi-core" }
kintsugi-model = { path = "../crates/kintsugi-model" }

[build-dependencies]
# Rasterize the brand SVG to PNG sizes at build time so the binary ships with
# its own icon (no external tools / no .icns on disk required).
resvg = { version = "0.45", default-features = false, features = ["text"] }
tiny-skia = "0.11"
usvg = "0.45"
png = "0.17"

[profile.release]
opt-level = "z"
lto = true
strip = true

[package.metadata.dioxus]
name = "Kintsugi"
