# Kintsugi Control Room — Dioxus (web/WASM) frontend for the Tauri shell.
# All-Rust, no npm: built with Trunk to `dist/`, which the Tauri host serves.
#   cargo install trunk        # once
#   trunk serve                # dev (Tauri devUrl points here)
#   trunk build --release      # prod (Tauri bundles dist/)
# Its own `[workspace]` detaches it from the repo-root workspace (wasm target +
# webview deps must not enter the default `cargo build`/`test --workspace`).
[workspace]

[package]
name = "kintsugi-control-room"
version = "0.2.1"
edition = "2021"
description = "Kintsugi Control Room — Dioxus frontend."
license = "MIT"

[dependencies]
dioxus = { version = "0.6", features = ["web"] }
# The shared, wasm-safe data contract — same types the native engine returns over
# `invoke`, checked by the compiler on this side too (the point of going all-Rust).
kintsugi-app-types = { path = "../crates/kintsugi-app-types" }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
