[package]
name = "aegis-cli"
description = "The shipped `aegis` binary: init, status, log, approve, and undo (stub)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "aegis"
path = "src/main.rs"

[dependencies]
aegis-core.workspace = true
aegis-daemon.workspace = true
aegis-intercept.workspace = true
aegis-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
time.workspace = true
clap.workspace = true
directories.workspace = true
interprocess.workspace = true

[dev-dependencies]
tempfile.workspace = true
aegis-core.workspace = true
aegis-daemon.workspace = true
