[package]
name = "aegis-core"
description = "Aegis core: shared types, deterministic rule engine, policy, decision memory, and the append-only hash-chained event log."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
sha2.workspace = true
hex.workspace = true
rusqlite.workspace = true
directories.workspace = true
reflink-copy = "0.1.29"

[dev-dependencies]
tempfile.workspace = true
rusqlite.workspace = true
proptest = "1.11.0"
