[package]
name = "aegis-intercept"
description = "Aegis interception adapters: the $PATH shim, the Claude Code hook bridge, and the aegis-exec MCP server. All normalize to one ProposedCommand."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "aegis_intercept"
path = "src/lib.rs"

[[bin]]
name = "aegis-shim"
path = "src/bin/shim.rs"

[[bin]]
name = "aegis-hook"
path = "src/bin/hook.rs"

[[bin]]
name = "aegis-mcp"
path = "src/bin/mcp.rs"

[dependencies]
aegis-core.workspace = true
aegis-daemon.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
interprocess.workspace = true

[dev-dependencies]
aegis-core.workspace = true
aegis-daemon.workspace = true
tempfile.workspace = true
