[package]
name = "kintsugi-cli"
description = "The shipped `kintsugi` binary: init, status, log, approve, and undo (stub)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "kintsugi"
path = "src/main.rs"

[dependencies]
kintsugi-core.workspace = true
kintsugi-daemon.workspace = true
kintsugi-intercept.workspace = true
kintsugi-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
time.workspace = true
clap.workspace = true
directories.workspace = true
interprocess.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
kintsugi-core.workspace = true
kintsugi-daemon.workspace = true
