[package]
name = "kintsugi"
description = "The `kintsugi` binary: a local-first safety layer for AI coding agents — intercept, classify, hold, undo, audit, and a live TUI."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "kintsugi"
path = "src/main.rs"

[dependencies]
kintsugi-core.workspace = true
kintsugi-daemon.workspace = true
kintsugi-intercept.workspace = true
kintsugi-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
time.workspace = true
clap.workspace = true
directories.workspace = true
interprocess.workspace = true
zeroize.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
kintsugi-core.workspace = true
kintsugi-daemon.workspace = true
