[package]
name = "kintsugi"
description = "Kintsugi — a local-first safety layer for AI coding agents. Installs all binaries: kintsugi, kintsugi-daemon, kintsugi-hook, kintsugi-shim, kintsugi-exec."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[[bin]]
name = "kintsugi"
path = "src/main.rs"

[[bin]]
name = "kintsugi-daemon"
path = "src/bin/kintsugi-daemon.rs"

[[bin]]
name = "kintsugi-hook"
path = "src/bin/kintsugi-hook.rs"

[[bin]]
name = "kintsugi-shim"
path = "src/bin/kintsugi-shim.rs"

[[bin]]
name = "kintsugi-exec"
path = "src/bin/kintsugi-exec.rs"

[dependencies]
kintsugi-core.workspace = true
kintsugi-daemon.workspace = true
kintsugi-intercept.workspace = true
kintsugi-model.workspace = true
kintsugi-tui.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
time.workspace = true
clap.workspace = true
directories.workspace = true
interprocess.workspace = true
zeroize.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
kintsugi-core.workspace = true
kintsugi-daemon.workspace = true
