[package]
name = "kintsugi-core"
description = "Kintsugi core: shared types, deterministic rule engine, policy, decision memory, and the append-only hash-chained event log."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
sha2.workspace = true
hex.workspace = true
rusqlite.workspace = true
directories.workspace = true
brush-parser.workspace = true
reflink-copy = "0.1.29"
argon2.workspace = true
chacha20poly1305.workspace = true
# Asymmetric auth proof (admin.rs): the vault stores only the password-derived
# ed25519 public key, so reading the file can't forge a "password to stop" proof.
ed25519-dalek = "2"
zeroize.workspace = true
getrandom.workspace = true

[dev-dependencies]
tempfile.workspace = true
rusqlite.workspace = true
proptest = "1.11.0"
