[package]
name = "kintsugi-daemon"
description = "Kintsugi resident daemon: local IPC server and the decision loop that classifies proposed commands and records them."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[lib]
name = "kintsugi_daemon"
path = "src/lib.rs"

[[bin]]
name = "kintsugi-daemon"
path = "src/main.rs"

[dependencies]
kintsugi-core.workspace = true
kintsugi-model.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
interprocess.workspace = true
directories.workspace = true
hex.workspace = true
notify = "8.2.0"

[dev-dependencies]
tempfile.workspace = true
kintsugi-core.workspace = true
kintsugi-model.workspace = true
