[package]
name = "kintsugi-intercept"
description = "Kintsugi interception adapters: the $PATH shim, the Claude Code hook bridge, and the kintsugi-exec MCP server. All normalize to one ProposedCommand."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "kintsugi_intercept"
path = "src/lib.rs"

[[bin]]
name = "kintsugi-shim"
path = "src/bin/shim.rs"

[[bin]]
name = "kintsugi-hook"
path = "src/bin/hook.rs"

[[bin]]
name = "kintsugi-mcp"
path = "src/bin/mcp.rs"

[dependencies]
kintsugi-core.workspace = true
kintsugi-daemon.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true
interprocess.workspace = true

[dev-dependencies]
kintsugi-core.workspace = true
kintsugi-daemon.workspace = true
tempfile.workspace = true
