[package]
name = "kintsugi-model"
description = "Kintsugi Tier-2 model wrapper: a warm CPU scorer that fills summary+risk for the ambiguous band. Heuristic by default; real GGUF inference behind the `llama` feature."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = []
# Real CPU GGUF inference via llama.cpp (requires a C/C++ toolchain).
llama = ["dep:llama-cpp-2"]
# Pinned + checksummed model weight download (the only permitted network egress).
download = ["dep:reqwest"]

[dependencies]
kintsugi-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
sha2.workspace = true
hex.workspace = true

llama-cpp-2 = { version = "0.1.146", optional = true }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "rustls"], optional = true }

[dev-dependencies]
tempfile.workspace = true
