[package]
name = "kintsugi-tui"
description = "Kintsugi ratatui terminal UI: a live timeline over the event log with keyboard navigation, filtering, detail, and undo."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
kintsugi-core.workspace = true
kintsugi-daemon.workspace = true
anyhow.workspace = true
ratatui = "0.30.1"
crossterm = "0.29.0"
time = { workspace = true }
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
