[package]
name = "kintsugi-tui"
description = "Kintsugi ratatui terminal UI: a live timeline over the event log with keyboard navigation, filtering, detail, and undo."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
kintsugi-core.workspace = true
kintsugi-daemon.workspace = true
anyhow.workspace = true
ratatui = "0.30.1"
crossterm = "0.29.0"
# `local-offset` lets the timeline render timestamps in the viewer's local zone
# (events are stored in UTC). The offset is read once at startup while the process
# is single-threaded, which is the only context the time crate proves sound.
time = { workspace = true, features = ["local-offset"] }
zeroize.workspace = true

[dev-dependencies]
tempfile.workspace = true
